Improve admin revenue and user transaction views
